fixed font sizes for mobile and desktop

--- a/src/App.css
+++ b/src/App.css
@@ -20,15 +20,20 @@ body{
   background-color:var(--main-background-color);
   font-family: 'Roboto', sans-serif;
   font-size: 0.9em;
-  line-height: 1.2em;
+  line-height: 1.4em;
 }
 
 a{
   color: #4E44CE; text-decoration: none;
 }
 
-h2, p{
+p{
   color: var(--main-text-color);
+}
+
+h2{
+  color: var(--title-text-color);
+  font-size: large;
 }
 
 strong{
