last FE adjust and main placeholder

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 :root {
   --main-background-color: #141414;
   --card-background-color: #14141460;
-  --card-background-lighter-color: #202020;
+  --card-background-lighter-color: #16161680;
   --main-text-color:#a0a0a0;
   --title-text-color:#dddddd;
 }
